<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>


    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".aboutus.AboutUsActivity">

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/iv_bismillah"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:src="@drawable/iv_bismillah"
                    android:adjustViewBounds="true"
                    android:layout_marginHorizontal="48dp"
                    app:layout_constraintTop_toTopOf="parent"/>

                <ImageView
                    android:id="@+id/iv_about_us"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    app:layout_constraintEnd_toStartOf="@+id/iv_zakat"
                    android:layout_marginTop="16dp"
                    android:src="@drawable/ic_nisab"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/iv_bismillah" />

                <ImageView
                    android:id="@+id/iv_zakat"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/ic_zakat"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="@+id/iv_about_us"
                    app:layout_constraintStart_toEndOf="@+id/iv_about_us" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:background="@drawable/back_round_rect_grey_stroke"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/iv_about_us">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginTop="16dp"
                        android:textSize="16sp"
                        android:text="What is Zakat &amp; Nisab?"
                        android:lineSpacingExtra="6.7sp"
                        android:textColor="@color/black" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginTop="6dp"
                        android:text="@string/str_about_us_app"
                        android:lineSpacingExtra="6.7sp" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginTop="16dp"
                        android:textSize="16sp"
                        android:text="Who made this app?"
                        android:lineSpacingExtra="6.7sp"
                        android:textColor="@color/black" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginTop="6dp"
                        android:text="@string/str_maker"
                        android:lineSpacingExtra="6.7sp" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginTop="16dp"
                        android:textSize="16sp"
                        android:text="Is this App Safe &amp; Secure"
                        android:lineSpacingExtra="6.7sp"
                        android:textColor="@color/black" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginTop="6dp"
                        android:text="@string/str_safety"
                        android:lineSpacingExtra="6.7sp" />



                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>